<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginbackgroundcolor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.co.medibox.activity.Activity_SplashScreen">

    <ImageView
        android:id="@+id/company_logo"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/company_logo"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/forgot_pass_txt"
        android:textColor="@color/light_black"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:id="@+id/edtFirstName_ForgotPass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittextformatting"
            android:hint="@string/hintFirstName_ForgotPass"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="5dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edtLastName_ForgotPass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittextformatting"
            android:hint="@string/hintLastName_ForgotPass"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="5dp"
            android:visibility="gone" />


        <AutoCompleteTextView
            android:id="@+id/edtEmail_ForgotPass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittextformatting"
            android:hint="@string/hintEmail_Login"
            android:inputType="textEmailAddress"
            android:padding="5dp" />


        <Button
            android:id="@+id/btnRecoverPass_ForgotPass"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonformatting"
            android:text="@string/btnRecoverPass_ForgotPass"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>