<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginbackgroundcolor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.co.medibox.activity.Activity_SplashScreen">

    <ImageView
        android:id="@+id/company_logo"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:src="@drawable/logo" />


    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/company_logo"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enter_admin_details"
            android:textColor="@color/light_black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/admin_first_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittextformatting"
            android:hint="@string/hintFirstName_Reg_User"
            android:inputType="text"
            android:padding="5dp" />

        <EditText
            android:id="@+id/admin_last_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittextformatting"
            android:hint="@string/hintLastName_Reg_User"
            android:inputType="text"
            android:padding="5dp" />


        <EditText
            android:id="@+id/admin_mobile_no"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittextformatting"
            android:hint="@string/hintMobileNum_Reg_User"
            android:inputType="number"
            android:padding="5dp" />

        <EditText
            android:id="@+id/admin_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittextformatting"
            android:hint="@string/hintEmail_Reg_User"
            android:inputType="textEmailAddress"
            android:padding="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:weightSum="10">


        <Button
            android:id="@+id/admin_reg_btn"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="5"
            android:background="@drawable/buttonformatting"
            android:text="@string/btnNext_Reg_User"
            android:textColor="@android:color/white"
            android:textSize="@dimen/normal_font"
            android:textStyle="bold" />

        <Button
            android:id="@+id/admin_login_btn"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="5"
            android:background="@drawable/buttonformatting"
            android:text="Login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/normal_font"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>